DevOps/Kubernetes/Yaml/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: '#{namespace}'
  labels:
    name: '#{namespace}'
    istio.io/rev: '#{istio_rev}'
    goldilocks.fairwinds.com/enabled: 'true'
